<resources>
    <string name="app_name">PlanningPokerUsers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_join">Join</string>
    <string name="tv_userLogin">User Login</string>
    <string name="et_groupName">GroupName</string>
    <string name="et_yourName">Name</string>
    <string name="tv_question">TextView</string>
    <string name="bt_Submit">Submit</string>
    <string name="et_results">Results</string>
    <string name="tv_groupName">Group name</string>
    <string name="bt_1">1</string>
    <string name="Name">Name</string>
    <string name="groupName">groupName</string>
    <string name="tv_quest">Question</string>
</resources>
