<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewResults">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/et_results" />

            <TextView
                android:id="@+id/tv_groupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/tv_groupName" />


            <TextView
                android:id="@+id/tv_quest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/tv_quest" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recyclerViewGroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>


        </LinearLayout>

    </ScrollView>

</FrameLayout>